# pymeasure

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  AUTHORS.txt  Agents.md  CHANGES.rst  CHANGES.txt  CITATION.cff  GP350.py  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  README  README.md  README.rst  RELEASE.md  TODO  appveyer.yml  appveyor.yml  buffer_test_nb.ipynb  codecov.yml  conftest.py  generated_test_smaract.py  keithleyDAQ6510.py  lecroy.py  log.py  pyproject.toml  pyrightconfig.json  readthedocs.yml  requirements.txt  sandbox.py  setup.cfg  setup.py  test_coverage_gap_analysis.md  (+3 more)
.github/: SUPPORT.md  dependabot.yml  pymeasure.yml  pymeasure_np2.yml  pymeasure_numpy2.yml  pymeasure_pandas3_numpy2.yml  pymeasure_python312.yml  pytest.json  sphinx.json
.github/workflows/: apply_sw4hw_standards.yml  pymeasure_CI.yml  python-package-conda.yml  python-publish.yml  tag-on-merge.yml  version.yaml
.trunk/: trunk.yaml
adapters/: serial.py
automate/: __init__.py  agilent.py  danfysik.py  data.py  django.py  experiment.py  experiment_tmp.py  fwbell.py  gpib.py  hallprobe.py  kepco.py  listeners.py  meta.py  parker.py  qt.py  qtgraph.py  qtwisted.py  results.py  server.py  signalrecovery.py
automate/composites/: fieldprobe.py  hallprobe.py  magnet.py
automate/data/: sqlalchemy.py
automate/display/: qt.py
automate/instrument/: danfysik.py  gpib.py  hallprobe.py  interfaces.py  keithley.py  lakeshore.py  parker.py
automate/instruments/: __init__.py  agilent.py  comedi.py  danfysik.py  esp.py  fieldprobe.py  fwbell.py  instrument.py  keithley.py  lakeshore.py  magnet.py  nidaqmx.py  parker.py  signalrecovery.py  stanford.py  tektronix.py  yokogawa.py
automate_non_visa/: __init__.py  agilent.py  gpib.py  keithley.py  lakeshore.py  stanford.py  tektronix.py
control/: parameter.py
control/instruments/: agilent.py  magnet.py  nidaqmx.py  signalrecovery.py
display/: Qt.py  __init__.py  curves.py  inputs.py  log.py  manager.py  widgets.py
docs/: Makefile  basic_tutorial.rst  basic_tutorial.txt  conf.py  getting_started.rst  getting_started.txt  index.rst  index.txt  introduction.rst  make.bat  quick_start.rst
docs/about/: authors.rst  authors.txt  changes.rst  index.rst  license.rst  license.txt  related_projects.rst
docs/api/: adapters.rst  adapters.txt  display.txt  example-FakeScpiAdapter.py  index.rst  index.txt
docs/contribute/: adding_instruments.rst  adding_instruments.txt  coding_standards.rst  coding_standards.txt  discuss.txt  index.rst  index.txt  reporting_errors.rst  reporting_errors.txt
docs/dev/: adding_instruments.rst  coding_standards.rst  contribute.rst  reporting_errors.rst
docs/getting_started/: connecting.rst  dependencies.rst  graphical.rst  index.rst  installing.rst  instruments.rst  introduction.rst
docs/tutorial/: connecting.rst  graphical.rst  gui_sequencer_example_sequence.txt  index.rst  procedure.rst
examples/: .gitignore  DMM_Datron1071.py  DMM_Keithley179A.py  README.md  default_config.ini  dsa815spectrum.py  gui.py  gui_custom_inputs.py  gui_custom_inputs.ui  gui_custom_parameters.py  hp34401a_rs232.py  multi_gui.py  my_config.ini  my_experiment.ipynb  procedures.py  script.ipynb  script.py  script2.ipynb  script_plotter.py  script_with_procedures_module.ipynb
examples/Basic/: HP3478A_plotter.py  LI_test.py  console.py  gui.py  gui_custom_inputs.py  gui_custom_inputs.ui  gui_estimator.py  gui_foreign_instrument.py  gui_instrument.py  gui_instrument_widget.py  gui_no_save_param.py  gui_sequencer.py  gui_sequencer_example_sequence.txt  gui_table.py  gui_widgets.py  image_gui.py  inputs_gallery.py  lecroy.py  script.py  script_plotter.py  sequencer_example_sequence.txt
examples/Basic_Image_GUI/: test_image_gui.py
examples/Current-Voltage Measurements/: iv.py  iv_keithley.py  iv_keithley2400.py  iv_yokogawa.py
examples/EfficiencyMeasurements/: motor_105.py
examples/Lock-In Amplifier Measurements/: LI5660-Data1.py
examples/Notebook Experiments/: script.ipynb  script2.ipynb
examples/Psu-Viewer/: psu_viewer.py  psu_viewer.ui
examples/Time-Series/: time_series_keithley2600.py
experiment/: workers.py
extras/: twisted.py
extras/worker/: twisted.py
instruments/: comedi.py  instrument.py
instruments/agilent/: agilent33220A.py  agilent33250A.py  agilent33500.py  agilent33521A.py  agilent4156.py  agilent8722ES.py
instruments/ametek/: ametek7270.py
instruments/berkeleynucleonics/: bn675.py  bn765.py  bnA2255.py
instruments/hp/: __init__.py
instruments/keithley/: keithley2000.py  keithley2750.py
instruments/keysight/: __init__.py  keysightDSA90000A.py  keysightN5767A.py
instruments/minicircuits/: RC_2SP4T_26.py  __init__.py  usb_2sp2t_dch.py
instruments/ni/: __init__.py
instruments/pickering/: pickering40_750_521.py
instruments/rigol/: mso5354.py
instruments/srs/: sr830.py  sr860.py
instruments/yokogawa/: yokogawa7651.py
pip-wheel-metadata/PyMeasure-0.10.1.dev159+gd6b1ef4.dist-info/: METADATA  top_level.txt
pymeasure/: __init__.py  _version.py  console.py  errors.py  experiment.py  generator.py  log.py  process.py  qtgraph.py  resources.py  test.py  thread.py  typing.py  units.py
pymeasure/adapters/: VXI11Adapter.py  __init__.py  activedso.py  adapter.py  fake_scpi.py  minicircuitsusb.py  minicircuitsusbattentuator.py  minicircuitsusbswitch.py  ni.py  ni_gpib_232ct.py  picoscope9400com.py  prologix.py  protocol.py  serial.py  serialadapter.py  socket.py  telnet.py  usbtmc.py  visa.py  visaadapter.py  vxi11.py
pymeasure/composites/: __init__.py  hallprobe.py  magnet.py
pymeasure/display/: Qt.py  __init__.py  browser.py  console.py  curves.py  graph.py  input_groups.py  inputs.py  (+19 more)
requirements/: conda-3.4.yml  conda-3.5.yml  conda-3.6.yml  conda-3.7.yml  conda-3.8.yml  conda-3.9.yml  conda.yml  core.txt  dev.txt  docs.txt  pymeasure.yml  pymeasure_dev.yml  pymeasure_readthedocs.txt
tests/: conftest.py  generator.py  test_expected_protocol.py  test_generator.py  test_log.py  test_process.py  test_thread.py
(+1439 files in other folders)
