[metadata]
name = PyMeasure
author = PyMeasure Developers
license = MIT
description = Scientific measurement library for instruments, experiments, and live-plotting
keywords =
    measure
    instrument
    experiment
    control
    automate
    graph
    plot
url = https://github.com/ralph-group/pymeasure
download_url = https://github.com/ralph-group/pymeasure/tarball/v0.7.0
long_description = file: README.rst, CHANGES.txt
long_description_content_type = text/x-rst

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
install_requires =
    numpy >= 1.6.1
    pandas >= 0.14
    pyvisa >= 1.8
    pyserial >= 2.7
    pyqtgraph >= 0.9.10

tests_require = pytest >= 2.9.1; pytest-qt >= 2.4.0; pytest-runner

[options.extras_require]
matplotlib = matplotlib >= 2.0.2
tcp = zmq >= 16.0.2; cloudpickle >= 0.3.1
python-vxi11 = python-vxi11 >= 0.9

[aliases]
test=pytest
