[metadata]
name = PyMeasure
# version is dynamically generated with setuptools_scm
url = https://github.com/pymeasure/pymeasure
author = PyMeasure Developers
description = Scientific measurement library for instruments, experiments, and live-plotting
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = measure, instrument, experiment control, automate, graph, plot
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.6.1
    pandas >= 0.14
    pint
    pyvisa >= 1.8
    pyserial >= 2.7
    pyqtgraph >= 0.12
    importlib-metadata; python_version<"3.8"

[options.extras_require]
tcp =
    pyzmq>=16.0.2
    cloudpickle>=0.3.1
python-vxi11 = python-vxi11>=0.9
tests =
    pytest >= 2.9.1
    pytest-qt >= 2.4.0  # install pyqt or pyside manually as desired
    pyvisa-sim >= 0.4.0

[flake8]
exclude = .git,__pycache__,docs/conf.py,build,dist
max-line-length = 100
max-complexity = 15
per-file-ignores =
    __init__.py:F401
